# portrait-hub

./: .dockerignore  .env.example  .gitignore  DEPLOY_UBUNTU.md  Dockerfile  Dockerfile.cpu  INFERENCE_SERVICE_UPGRADE_PLAN.md  PORTRAIT_HUB_PLAN.md  README.md  SLO.md  dev_start.py  docker-compose.cpu.yml  docker-compose.yml  docs-security.md  main.py  model-capabilities.yml  models.yml  ops-grafana-dashboard.json  ops-prometheus-alerts.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-cpu.txt  requirements-prod-optional.txt  requirements.txt  sitecustomize.py  yaml.pyi  影鉴优化方案.md  控制台前端重建方案.md  推送至GitHub.bat  更新日志.md
app/: __init__.py  admin_configuration.py  api_contracts.py  config_hot_reload.py  config_overrides.py  console.css  console.html  console.js  core.py  gallery_search.py  gallery_state.py  geometry.py  image_io.py  image_preprocess.py  inference.py  inference_classification.py  inference_detection.py  inference_reid.py  inference_tracks.py  metrics.py  model_config.py  model_config_access.py  model_config_loader.py  model_config_resolver.py  model_config_state.py  model_config_writer.py  model_package.py  model_refs.py  network_access_policy.py  observability.py  oidc_auth.py  portrait_access.py  portrait_analysis_archive.py  portrait_async.py  portrait_audit.py  portrait_auth.py  portrait_bootstrap.py  portrait_call_logs.py  portrait_compare.py  portrait_console_access.py  (+100 more)
deploy/: k8s-governance-cronjob.yaml  k8s-stream-worker.yaml  k8s-video-job-worker.yaml  portrait-governance-scheduler.service  portrait-governance-scheduler.timer  portrait-stream-worker.service  portrait-video-job-worker.service
docs/: 更新日志.md
examples/: portrait-model-ab-shadow.example.yml  portrait-model-regression.example.yml  production-model-capabilities.example.yml  production-models.example.yml
models/: osnet_ibn_x1_0.governance.yml  osnet_ibn_x1_0.model-card.yml  yolov8n.governance.yml  yolov8n.model-card.yml
ops/: grafana-dashboard.json  nginx-gateway.example.conf  production.env.example  prometheus-alerts.yml  prometheus-burnrate-alerts.yml
requirements/: base.in  dev.txt  prod-optional.txt
tests/: conftest.py  test_admin_configuration.py  test_api_contract.py  test_api_contract_01_config_console.py  (+64 more)
(+193 files in other folders)
