[project]
name = "portrait-hub"
version = "0.8.0"
requires-python = ">=3.12"
description = "PortraitHub GPU 推理与人像智能服务"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
strict = true
